--- a/index.html
+++ b/index.html
@@ -14,36 +14,32 @@
         <h1 class="title">
             Playlist van 1I
         </h1>
-        <div class="album-cards "  >
+        <div class="album-cards ">
 
-            <div class=" card">
-                <div class="album-img-overlay-container">
-                    <img src="assets/albums/from-zero.jpg" alt="album" class="album-img">
-                    <div class="album-overlay">
-                        <h2>Unshatter - Linkin Park</h2>
-                        <p>From zero</p>
-                    </div>
+            <div class="card">
+                <div class="album-overlay">
+                    <h2 class=""> <span>Unshatter</span> - <span>Linkin Park</span> </h2>
+                    <p>From zero</p>
                 </div>
+                <img src="assets/albums/from-zero.jpg" alt="album" class="album-img">
+
+
+
 
                 <div class="card-info">
-                    <div class="info-container">
-                        <img src="assets/photos/avatar.png" alt="avatar" class="avatar">
-                        <div class="text-info">
-                            <h2>Naam</h2>
-                            <p>leeftijd</p>
-                        </div>
-                    </div>
+                    <img src="assets/photos/avatar.png" alt="avatar" class="avatar">
 
+                    <h2>Naam</h2>
 
                     <a href="" target="_blank" class="card-link">Bekijk kaartje</a>
                 </div>
             </div>
-            
+
         </div>
 
         <div class="swiper ">
             <div class="swiper-wrapper ">
-                                <div class="swiper-slide">Slide 1</div>
+                <div class="swiper-slide">Slide 1</div>
                 <div class="swiper-slide">Slide 2</div>
                 <div class="swiper-slide">Slide 3</div>
                 <div class="swiper-slide">Slide 4</div>
