--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </h1>
         <div class="album-cards ">
 
-            <div class="card">
+            <!-- <div class="card">
                 <div class="album-overlay">
                     <h2 class=""> <span>Unshatter</span> - <span>Linkin Park</span> </h2>
                     <p>From zero</p>
@@ -33,21 +33,61 @@
 
                     <a href="" target="_blank" class="card-link">Bekijk kaartje</a>
                 </div>
-            </div>
+            </div> -->
 
         </div>
 
         <div class="swiper ">
             <div class="swiper-wrapper ">
-                <div class="swiper-slide">Slide 1</div>
-                <div class="swiper-slide">Slide 2</div>
-                <div class="swiper-slide">Slide 3</div>
-                <div class="swiper-slide">Slide 4</div>
-            </div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+                <div class="swiper-slide ">
+                    <div class="card">
+                        <div class="album-overlay">
+                            <h2 class=""> <span>Unshatter</span> - <span>Linkin Park</span> </h2>
+                            <p>From zero</p>
+                        </div>
+                        <img src="assets/albums/from-zero.jpg" alt="album" class="album-img">
+                        <div class="card-info">
+                            <img src="assets/photos/avatar.png" alt="avatar" class="avatar">
 
+                            <h2>Tjeerd</h2>
+
+                            <a href="" target="_blank" class="card-link">Bekijk kaartje</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card">
+                        <div class="album-overlay">
+                            <h2 class=""> <span>Unshatter</span> - <span>Linkin Park</span> </h2>
+                            <p>From zero</p>
+                        </div>
+                        <img src="assets/albums/oh-my-dis-side.jpg" alt="album" class="album-img">
+                        <div class="card-info">
+                            <img src="assets/photos/avatar.png" alt="avatar" class="avatar">
+
+                            <h2>Isaac</h2>
+
+                            <a href="" target="_blank" class="card-link">Bekijk kaartje</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card">
+                        <div class="album-overlay">
+                            <h2 class=""> <span>Unshatter</span> - <span>Linkin Park</span> </h2>
+                            <p>From zero</p>
+                        </div>
+                        <img src="assets/albums/in-your-own-home.jpg" alt="album" class="album-img">
+                        <div class="card-info">
+                            <img src="assets/photos/avatar.png" alt="avatar" class="avatar">
+
+                            <h2>Caitlin</h2>
+
+                            <a href="" target="_blank" class="card-link">Bekijk kaartje</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
