Styling toegevoegd voor het Album cover gedeelte
Ik ging hier stylen op basis van Small screen

--- a/index.html
+++ b/index.html
@@ -6,26 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Squad page 1i</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <main>
         <section class="card">
             <div class="image-container">
-                <img src="assets/albumcover.jpg" alt="album cover">
-                <div class="album-info">
-                    <h2>Titel - Artiest</h2>
-                    <p>Album</p>
+                <button class="beluister-btn">Beluister nummer</button>
+                <img class="albumcover" src="assets/albumcover.jpeg" width="100%;" alt="album cover">
+                <div id="overlay">
+                    <div class="album-info">
+                        <h2>Oh My Dis Side (Feat. Quavo)</h2>
+                        <h4>Travis Scott</h4>
+                        <p>Rodeo</p>
+                    </div>
                 </div>
+
             </div>
         </section>
 
         <section class="person">
             <div class="person-container">
-                <img src="assets/avatar.jpg" alt="Foto van persoon">
+                <img class="avatar" src="assets/avatar.jpg" width="150px" alt="Foto van persoon">
                 <div class="person-info">
-                    <h2>Naam</h2>
-                    <p>Leeftijd</p>
+                    <h2>Isaac</h2>
+                    <p>20 jaar</p>
                 </div>
 
                 <button>Bekijk</button>
