--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <main>
-        <h1 class="title">
+         <h1 class="title">
             Playlist van 1I
         </h1>
-        <div class="album-cards ">
+      <!--    <div class="album-cards ">
 
-            <!-- <div class="card">
+           <div class="card">
                 <div class="album-overlay">
                     <h2 class=""> <span>Unshatter</span> - <span>Linkin Park</span> </h2>
                     <p>From zero</p>
@@ -33,19 +33,21 @@
 
                     <a href="" target="_blank" class="card-link">Bekijk kaartje</a>
                 </div>
-            </div> -->
+            </div>
 
-        </div>
+        </div> -->
 
         <div class="swiper ">
-            <div class="swiper-wrapper ">
-                <div class="swiper-slide ">
+            <div id="card-holder" class="swiper-wrapper ">
+
+
+                 <!-- <div class="swiper-slide ">
                     <div class="card">
                         <div class="album-overlay">
                             <h2 class=""> <span>Unshatter</span> - <span>Linkin Park</span> </h2>
                             <p>From zero</p>
                         </div>
-                        <img src="assets/albums/from-zero.jpg" alt="album" class="album-img">
+                        <img src="assets/covers/from-zero.jpg" alt="album" class="album-img">
                         <div class="card-info">
                             <img src="assets/photos/avatar.png" alt="avatar" class="avatar">
 
@@ -61,7 +63,7 @@
                             <h2 class=""> <span>Unshatter</span> - <span>Linkin Park</span> </h2>
                             <p>From zero</p>
                         </div>
-                        <img src="assets/albums/oh-my-dis-side.jpg" alt="album" class="album-img">
+                        <img src="assets/covers/oh-my-dis-side.jpg" alt="album" class="album-img">
                         <div class="card-info">
                             <img src="assets/photos/avatar.png" alt="avatar" class="avatar">
 
@@ -77,7 +79,7 @@
                             <h2 class=""> <span>Unshatter</span> - <span>Linkin Park</span> </h2>
                             <p>From zero</p>
                         </div>
-                        <img src="assets/albums/in-your-own-home.jpg" alt="album" class="album-img">
+                        <img src="assets/covers/in-your-own-home.jpg" alt="album" class="album-img">
                         <div class="card-info">
                             <img src="assets/photos/avatar.png" alt="avatar" class="avatar">
 
@@ -86,15 +88,18 @@
                             <a href="" target="_blank" class="card-link">Bekijk kaartje</a>
                         </div>
                     </div>
-                </div>
+                </div>  -->
             </div>
+            <div class="swiper-button-prev swiper-button"></div>
+
+            <div class="swiper-button-next swiper-button"></div>
         </div>
 
 
 
+        <script src="scripts/script.js" type="module"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-        <script src="scripts/script.js"></script>
     </main>
 </body>
 
