Styling gedaan voor het personenstukje

--- a/index.html
+++ b/index.html
@@ -30,13 +30,22 @@
 
         <section class="person">
             <div class="person-container">
-                <img class="avatar" src="assets/avatar.jpg" width="150px" alt="Foto van persoon">
+                <img class="avatar" src="assets/avatar.jpg" width="100%;" alt="Foto van persoon">
                 <div class="person-info">
                     <h2>Isaac</h2>
                     <p>20 jaar</p>
                 </div>
 
-                <button>Bekijk</button>
+                <button class="bekijk-btn">
+                    Bekijken
+                    <div class="icon">
+                        <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                                fill="currentColor"></path>
+                        </svg>
+                    </div>
+                </button>
             </div>
         </section>
 
