--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <main>
         <section class="card">
             <div class="image-container">
-                <button class="beluister-btn">Beluister nummer</button>
+                <a href="https://open.spotify.com/track/2rMFawCg4BW65jzbwztXAV?si=5e9b284cece04085" target="_blank"
+                    class="beluister-btn">Beluister nummer</a>
                 <img class="albumcover" src="assets/albumcover.jpeg" width="100%;" alt="album cover">
                 <div id="overlay">
                     <div class="album-info">
@@ -36,7 +37,7 @@
                     <p>20 jaar</p>
                 </div>
 
-                <button class="bekijk-btn">
+                <a class="bekijk-btn" href="https://isaaceswa.github.io/your-tribe-profile-card/" target="_blank">
                     Bekijken
                     <div class="icon">
                         <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -45,7 +46,7 @@
                                 fill="currentColor"></path>
                         </svg>
                     </div>
-                </button>
+                </a>
             </div>
         </section>
 
