Locations kaartjes toegevoegd
Squad functie gedupliceerd en aangepast naar locations

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <h1 class="title">
             Playlist van 1I
         </h1>
-
+        <!-- Toggle knoppen -->
+        <div class="buttons">
+            <button id="show-squad">Toon Squad</button>
+            <button id="show-locations">Toon Locaties</button>
+        </div>
 
 
         <!--    <div class="album-cards ">
@@ -102,9 +106,11 @@
 
 
 
-        <script src="scripts/script.js" type="module"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+        <script src="scripts/script.js" type="module"></script>
+
     </main>
 </body>
 
