--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             Playlist van 1I
         </h1>
 
+           <div class="buttons">
+            <button id="show-squad">Toon Squad</button>
+            <button id="show-locations">Toon Locaties</button>
+            <button id="shuffle">Shuffle</button>
+        </div>
+
         <!-- <input id="shuffle" type="button" value="shuffle" onclick="randomizer();"></input> -->
         <div class="swiper ">
             <div id="card-holder" class="swiper-wrapper ">
