Fixed switch buttons and location cards

--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
         <h1 class="title">
             Playlist van 1I
         </h1>
-        <div class="buttons">
-            <button id="show-squad">Toon Squad</button>
-            <button id="show-locations">Toon Locaties</button>
-        </div>
-        <div class="swiper">
-            <div id="card-holder" class="swiper-wrapper ">
-        </div>
+
+        <section class="swiper">
+            <div id="card-holder" class="swiper-wrapper "></div>
             <div class="swiper-button-prev swiper-button"></div>
             <div class="swiper-button-next swiper-button"></div>
-        </div>
+        </section>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="scripts/script.js" type="module"></script>
-
+        <section class="buttons">
+            <button id="show-squad">Toon Squad</button>
+            <button id="show-locations">Toon Locaties</button>
+        </section>
     </main>
 </body>
 
